--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Acquami</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Latest compiled and minified CSS -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Icons -->
   <link href="assets/css/font-awesome.min.css" rel="stylesheet">
