pagina di autenticazione

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,10 @@
 <body>
   <app-root></app-root>
 </body>
+<footer>
+  <div class="footer pull-right mx-2">
+    <span class="text-muted text-left">&copy; 2018 acquaMI - Created by Irene Nicolini</span>
+  </div>
+</footer>
 
 </html>
