validazione login e fix form dettaglio

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Acquami</title>
+  <title>Aquami</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Latest compiled and minified CSS -->
@@ -19,7 +19,7 @@
 </body>
 <footer>
   <div class="footer pull-right mx-2">
-    <span class="text-muted text-left">&copy; 2018 acquaMI - Created by Irene Nicolini</span>
+    <span class="text-muted text-left">&copy; 2018 aquaMI - Created by Irene Nicolini</span>
   </div>
 </footer>
 
