login reactiveform + sistemate pagine tabelle e footer

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <app-root></app-root>
 </body>
 <footer>
-  <div class="footer pull-right mx-2">
+  <div class="footer">
     <span class="text-muted text-left">&copy; 2018 aquaMI - Created by Irene Nicolini</span>
   </div>
 </footer>
