nuova icona, qualche fix

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Latest compiled and minified CSS -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Icons -->
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-  <link href="assets/css/simple-line-icons.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono%7CArvo:400%7CRoboto:300,400,500,700%7CCookie" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./assets/img/alga.png">
 </head>
 
 <body>
