sistemata navbar  e footer

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 <body>
   <app-root></app-root>
 </body>
-<footer>
-  <div class="footer">
-    <span class="text-muted text-left">&copy; 2018 aquaMI - Created by Irene Nicolini</span>
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted pull-right">&copy; 2018 aquaMI - Created by Irene Nicolini</span>
   </div>
 </footer>
 
